Update with final version of task03

--- a/g++/Task03/Makefile
+++ b/g++/Task03/Makefile
@@ -1,13 +1,21 @@
 # Compiler
 CXX = g++
 
-# for optimization, -std=c++17 for C++17 standard, -Wall -Wextra for warnings
-# the -I flag is used to include the hdf5 header files (hdf5/include)
-CXXFLAGS = -Wall -Wextra -std=c++17 -I/data0/biasissi/Scientific_Computing/my_libraries/hdf5/include -I/data0/biasissi/Scientific_Computing/my_libraries/gsl/include
+# Variables for library paths (adjust to yours)
+# To look where you have the libraries, you can use the commands:
+# "locate libhdf5.so" or "locate libgsl.so"
+HDF5_INCLUDE ?= /data0/biasissi/Scientific_Computing/my_libraries/hdf5/include
+HDF5_LIB ?= /data0/biasissi/Scientific_Computing/my_libraries/hdf5/lib
+GSL_INCLUDE ?= /data0/biasissi/Scientific_Computing/my_libraries/gsl/include
+GSL_LIB ?= /data0/biasissi/Scientific_Computing/my_libraries/gsl/lib
 
-# the -L flag is used to include the hdf5 library files (hdf5/lib)
-# the -lhdf5 flag is used to link the hdf5 library as well as the gsl libraries	
-LDFLAGS = -L/data0/biasissi/Scientific_Computing/my_libraries/hdf5/lib -L/data0/biasissi/Scientific_Computing/my_libraries/gsl/lib -lhdf5 -lgsl -lgslcblas
+# -std=c++17 for C++17 standard, -Wall -Wextra for warnings
+# the -I flag is used to include the hdf5 and gsl header files
+CXXFLAGS = -Wall -Wextra -std=c++17 -I$(HDF5_INCLUDE) -I$(GSL_INCLUDE)
+
+# the -L flag is used to include the hdf5 and gsl libraries files
+# the -lhdf5 -lgsl -lgslcblas flags are used to link the hdf5 library as well as the gsl libraries	
+LDFLAGS = -L$(HDF5_LIB) -L$(GSL_LIB) -lhdf5 -lgsl -lgslcblas
 
 # Targets to be compiled
 TARGETS = task03_1 task03_2 task03_1_hdf5_gsl task03_2_hdf5_gsl
@@ -19,8 +27,10 @@ all: $(TARGETS)
 # $@: target name (aka the final task file or what is on left side of ":")
 # $<: first dependency (aka the input .cpp file or what is on right side of ":")
 %: %.cpp
+	@echo "Compiling $< ..."
 	$(CXX) $(CXXFLAGS) -o $@ $< $(LDFLAGS)
 
 # Clean rule (delete all compiled targets)
 clean:
+	@echo "Cleaning up ..."
 	rm -f $(TARGETS)
