Remove large vector data files and update gitignore
- Removed all vector_N*.dat and vector_N*.h5 files to comply with GitHub file size limits
- Updated .gitignore to prevent future accidental commits of large data files
- Updated VS Code settings and MPI benchmark script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/data0/biasissi/Scientific_Computing/g++/Task07"
 }
